--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: 'Home'
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.1459"/>
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.4812"/>
     <style>
       ._footer { margin-top:1rem !important }
       h1.hero { font-family: 'Arial',system-ui,sans-serif }
@@ -43,8 +43,10 @@ title: 'Home'
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="/dove/posts">Posts</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/vars">Variables</a>
                 </p>
-                <hr class="thin border-gray-light"/>
               </div>
             </nav>
             <main class="_main">
@@ -187,6 +189,7 @@ title: 'Home'
                       <h3 class="mt-0">Posts</h3>{{ posts | markdownify }}
                     </div>
                   </div>
+                  <hr class="thin border-gray-light"/>
                   <h3>Configurations</h3>{% capture config %}{% include_relative config.md %}{% endcapture %}{{ config | markdownify }}
                 </div>
               </article>
@@ -242,7 +245,7 @@ title: 'Home'
       <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
       <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
       <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.1459"></script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.4812"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
       <script>anchors?.add();</script>
     </div>
