--- a/prime/404.html
+++ b/prime/404.html
@@ -1,3 +1,7 @@
+---
+layout: html
+
+---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US"><!-- path   : prime/404.html -->
   <!-- layout : dove/_source/_layouts/prime -->
@@ -7,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.6541"/>{% include layout_head.html %}<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>{% include layout_head.html %}<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -16,7 +20,7 @@
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1 class="_logo"><a href="/dove/">Dove</a></h1>
+                <h1>{% include logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -56,6 +60,10 @@
             </main>
             <footer class="_footer footer mt-5">
               <div class="_layout">
+                <hr class="thin border-gray-light"/>
+                <p class="text-right text-grey"><small>
+                    This site is open source.
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/404.html.pug">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
