--- a/prime/404.html
+++ b/prime/404.html
@@ -20,7 +20,7 @@ layout: html
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include logo.html %}</h1>
+                <h1>{% include dove_logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -32,7 +32,6 @@ layout: html
                       </svg></i></i>
 
 <a href="/dove/prime/preview.html">Preview</a>
-<a href="/dove/prime/legacy.html">Legacy</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="/dove/prime/">Home</a>
@@ -52,7 +51,7 @@ layout: html
                       <p>The content you are looking for is not here.</p>
                     </div>
                   </div>
-                  <hr class="thin border-gray-light"/>
+                  <hr/>
                   <p><a class="button text-secondary _bt -flat -l" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a><a class="button text-secondary _bt -flat -l" href="/dove/" title="Go to Home Page">Home</a><a class="button text-secondary _bt -flat -l" href="/dove/pages" title="Go to Pages">Pages</a><a class="button text-secondary _bt -flat -l" href="/dove/posts" title="Go to Posts">Posts</a>
                   </p>
                 </div>
