--- a/prime/legacy.html
+++ b/prime/legacy.html
@@ -20,7 +20,7 @@ layout: html
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include logo.html %}</h1>
+                <h1>{% include dove_logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -32,7 +32,6 @@ layout: html
                       </svg></i></i>
 
 <a href="/dove/prime/preview.html">Preview</a>
-<a href="/dove/prime/legacy.html">Legacy</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="/dove/prime/">Home</a>
