--- a/prime/page.html
+++ b/prime/page.html
@@ -50,11 +50,7 @@ layout: html
               </article>
             </main>
             <footer class="_footer footer mt-5">
-              <div class="_layout">
-                <hr class="thin border-gray-light"/>
-                <p class="text-right text-grey"><small>
-                    This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/page.html.pug">Improve this page</a>.</small></p>
+              <div class="_layout">{% include footer.md %}
               </div>
             </footer>
           </div>
