--- a/prime/preview.html
+++ b/prime/preview.html
@@ -467,11 +467,7 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
               </article>
             </main>
             <footer class="_footer footer mt-5">
-              <div class="_layout">
-                <hr class="thin border-gray-light"/>
-                <p class="text-right text-grey"><small>
-                    This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/preview.html.pug">Improve this page</a>.</small></p>
+              <div class="_layout">{% include footer.md %}
               </div>
             </footer>
           </div>
