--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ description: A theme development project.
                     </div>
                   </div>
                   <hr class="thin"/>
-                  <p class="text-grey">These are supporting posts and pages for development puposes.</p>{% capture pages %}{% include dove/pages.md exclude="" %}{% endcapture %}{% capture posts %}{% include dove/posts.md exclude="" %}{% endcapture %}
+                  <p class="text-grey">These are supporting posts and pages for development puposes.</p>{% capture pages %}{% include pages.md exclude="" %}{% endcapture %}{% capture posts %}{% include posts.md exclude="" %}{% endcapture %}
                   <div class="flex" style="gap:3rem">
                     <div id="pages_" style="min-width:250px">
                       <h3 class="mt-0">Pages</h3>{{ pages | markdownify }}
