--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@ title: Dove
 description: A theme development project.
 ---
 <!DOCTYPE html>
-<html class="_dove_layout _prime_layout" lang="en-US"><!-- path   : index.html -->
-  <!-- layout : dove/_source/_layouts/dove -->
+<html class="_dove_layout" lang="en-US">
+<!-- path   : index.html -->
+<!-- layout : dove/_source/_layouts/dove -->
   <head>
-    <meta charset="utf-8"/>{% seo %}
+    <meta charset="utf-8"/>
+{% seo %}
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -23,7 +25,9 @@ description: A theme development project.
       article #pages_ ul li,
       article #posts_ ul li,
       article .rapat li { margin-left:0 }
-    </style>{% include layout_head.html %}<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    </style>
+{% include layout_head.html %}
+<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -32,11 +36,12 @@ description: A theme development project.
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>🕊️ Dove is a theme development project</h1>
+                <h1>🕊️ The Dove Project</h1>
               </div>
             </header>
             <nav class="_nav">
-              <div class="_layout">{% capture nav %}{% include dove/nav.md %}{% endcapture %}{{ nav | markdownify }}
+              <div class="_layout">{%- capture nav %}{% include dove/nav.md %}{%- endcapture %}
+{{ nav | markdownify }}
               </div>
             </nav>
             <main class="_main">
@@ -54,10 +59,8 @@ description: A theme development project.
                                 <svg viewBox="0 0 24 24">
                                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                                 </svg></i></i>
-
 <a href="/dove/core/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
-
 <a href="/dove/core/home.html">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
@@ -68,10 +71,8 @@ description: A theme development project.
                                 <svg viewBox="0 0 24 24">
                                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                                 </svg></i></i>
-
 <a href="/dove/mallet/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
-
 <a href="/dove/mallet/home.html">Home</a>
 <a href="/dove/mallet/page.html">Page</a>
 <a href="/dove/mallet/404.html">404</a>
@@ -82,10 +83,8 @@ description: A theme development project.
                                 <svg viewBox="0 0 24 24">
                                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                                 </svg></i></i>
-
 <a href="/dove/nova/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
-
 <a href="/dove/nova/home.html">Home</a>
 <a href="/dove/nova/page.html">Page</a>
 <a href="/dove/nova/404.html">404</a>
@@ -96,10 +95,8 @@ description: A theme development project.
                                 <svg viewBox="0 0 24 24">
                                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                                 </svg></i></i>
-
 <a href="/dove/prime/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
-
 <a href="/dove/prime/home.html">Home</a>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
@@ -109,22 +106,23 @@ description: A theme development project.
                     </div>
                   </div>
                   <hr class="thin"/>
-                  <p class="text-grey">These are supporting posts and pages for development puposes.</p>{% capture pages %}{% include pages.md exclude="" %}{% endcapture %}{% capture posts %}{% include posts.md exclude="" %}{% endcapture %}
+                  <p class="text-grey">These are supporting posts and pages for development purposes.</p>{%- capture pages %}{% include pages.md exclude="" %}{%- endcapture %}{%- capture posts %}{% include posts.md exclude="" %}{%- endcapture %}
                   <div class="flex" style="gap:3rem">
                     <div id="pages_" style="min-width:250px">
                       <h3 class="mt-0">Pages</h3>{{ pages | markdownify }}
                     </div>
-                    <div id="posts_" style="min-width:150px">
+                    <div id="posts_" style="min-width:250px">
                       <h3 class="mt-0">Posts</h3>{{ posts | markdownify }}
                     </div>
                   </div>
                   <hr class="thin"/>
-                  <h3>Configurations</h3>{% capture config %}{% include_relative _config.md %}{% endcapture %}{{ config | markdownify }}
+                  <h3>Configurations</h3>{%- capture config %}{% include_relative _config.md %}{%- endcapture %}{{ config | markdownify }}
                 </div>
               </article>
             </main>
             <footer class="_footer footer mt-5">
-              <div class="_layout">{% capture footer %}{% include dove/footer.md %}{% endcapture %}{{ footer | markdownify }}
+              <div class="_layout">{%- capture footer %}{% include dove/footer.md %}{%- endcapture %}
+{{ footer | markdownify }}
                 <hr class="thin"/>
                 <p class="text-right text-gray"><small>
                     This site is open source.
@@ -135,8 +133,11 @@ description: A theme development project.
         </div>
       </div>
       <div class="_view">
-        <div class="_layout _1200">{% include theme_switch.html %}</div>
-      </div>{% include layout_body.html %}
+        <div class="_layout _1200">
+{% include theme_switch.html %}
+        </div>
+      </div>
+{% include layout_body.html %}
     </div>
   </body>
 </html>
