--- a/mallet/404.html
+++ b/mallet/404.html
@@ -1,14 +1,24 @@
+---
+layout: html
+use_pug: true
+title: Not found
+description: The content you are looking for is not here.
+index: false
+---
 <!DOCTYPE html>
-<html class="_mallet_layout" lang="en-US"><!-- path   : mallet/404.html -->
-  <!-- layout : dove/_source/_layouts/mallet -->
+<html class="_mallet_layout" lang="en-US">
+<!-- path   : mallet/404.html -->
+<!-- layout : dove/_source/_layouts/mallet -->
   <head>
-    <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Not found | Dove</title><!-- End Jekyll SEO tag -->
+    <meta charset="utf-8"/>
+{% seo %}
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/mallet/css/style.css?r=2512.04.3225"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+{% include layout_head.html %}
+<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -24,10 +34,8 @@
                   <svg viewBox="0 0 24 24">
                     <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                   </svg></i></i>
-
 <a href="/dove/mallet/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
-
 <a href="/dove/mallet/home.html">Home</a>
 <a href="/dove/mallet/page.html">Page</a> <b>404</b>
             </div>
@@ -43,7 +51,7 @@
               </div>
               <div style="margin-top:3rem"></div>
               <hr/>
-              <p><a class="button text-secondary _bt -flat -l" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a><a class="button text-secondary _bt -flat -l" href="/dove/" title="Go to Home Page">Home</a><a class="button text-secondary _bt -flat -l" href="/dove/pages" title="Go to Pages">Pages</a><a class="button text-secondary _bt -flat -l" href="/dove/posts" title="Go to Posts">Posts</a>
+              <p><a class="button" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a><a class="button" href="/dove/" title="Go to Home Page">Home</a><a class="button" href="/dove/pages" title="Go to Pages">Pages</a><a class="button" href="/dove/posts" title="Go to Posts">Posts</a>
               </p>
             </article>
           </main>
@@ -55,18 +63,12 @@
                 This site is open source.
                 <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/404.html.pug">Improve this page</a>.</small></p>
           </footer>
-          <div class="_theme_switch _needjs"><a class="_bt -h" href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
-                  <svg viewBox="0 0 24 24">
-                    <path d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z" fill="currentColor" fill-opacity="1"></path>
-                  </svg></i></i></a></div>
         </div>
       </div>
-      <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
-      <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
-      <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2512.04.3225"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
-      <script>anchors?.add();</script>
+      <div class="_view">
+{% include theme_switch.html %}
+      </div>
+{% include layout_body.html %}
     </div>
   </body>
 </html>
