--- a/prime/page.html
+++ b/prime/page.html
@@ -1,20 +1,24 @@
 ---
 layout: html
 use_pug: true
-index: false
 title: Page
 description: A theme development project.
+index: false
 ---
 <!DOCTYPE html>
-<html class="_prime_layout" lang="en-US"><!-- path   : prime/page.html -->
-  <!-- layout : dove/_source/_layouts/prime -->
+<html class="_prime_layout" lang="en-US">
+<!-- path   : prime/page.html -->
+<!-- layout : dove/_source/_layouts/prime -->
   <head>
-    <meta charset="utf-8"/>{% seo %}
+    <meta charset="utf-8"/>
+{% seo %}
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>{% include layout_head.html %}<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+{% include layout_head.html %}
+<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -34,10 +38,8 @@ description: A theme development project.
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
-
 <a href="/dove/prime/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
-
 <a href="/dove/prime/home.html">Home</a> <b>Page</b>
 <a href="/dove/prime/404.html">404</a>
                 </p>
@@ -53,7 +55,8 @@ description: A theme development project.
               </article>
             </main>
             <footer class="_footer footer mt-5">
-              <div class="_layout">{% capture footer %}{% include footer.md %}{% endcapture %}{{ footer | markdownify }}
+              <div class="_layout">{%- capture footer %}{% include footer.md %}{%- endcapture %}
+{{ footer | markdownify }}
                 <hr class="thin"/>
                 <p class="text-right text-gray"><small>
                     This site is open source.
@@ -64,8 +67,11 @@ description: A theme development project.
         </div>
       </div>
       <div class="_view">
-        <div class="_layout _1200">{% include theme_switch.html %}</div>
-      </div>{% include layout_body.html %}
+        <div class="_layout _1200">
+{% include theme_switch.html %}
+        </div>
+      </div>
+{% include layout_body.html %}
     </div>
   </body>
 </html>
