--- a/prime/preview.html
+++ b/prime/preview.html
@@ -1,20 +1,24 @@
 ---
 layout: html
 use_pug: true
-index: false
 title: Preview
 description: A theme development project.
+index: false
 ---
 <!DOCTYPE html>
-<html class="_prime_layout" lang="en-US"><!-- path   : prime/preview.html -->
-  <!-- layout : dove/_source/_layouts/prime -->
+<html class="_prime_layout" lang="en-US">
+<!-- path   : prime/preview.html -->
+<!-- layout : dove/_source/_layouts/prime -->
   <head>
-    <meta charset="utf-8"/>{% seo %}
+    <meta charset="utf-8"/>
+{% seo %}
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>{% include layout_head.html %}<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+{% include layout_head.html %}
+<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -33,10 +37,8 @@ description: A theme development project.
 <i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i>
- <b>Preview</b>
+                      </svg></i></i> <b>Preview</b>
 <i class="_icon"><i class="itext">&bull;</i></i>
-
 <a href="/dove/prime/home.html">Home</a>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
@@ -182,8 +184,8 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <hr class="mb-3" />
 
-<p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb pa bg-white" width="64" height="64" />
-<img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb pa bg-white" width="64" height="64" />
+<p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb pa" width="64" height="64" />
+<img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb pa" width="64" height="64" />
 <img src="https://techie-joe.github.io/core/images/core-64x64.png" alt="Small image" class="centered mb pa bg-white" width="64" height="64" /></p>
 
 <hr class="mt-3" />
@@ -479,7 +481,8 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
               </article>
             </main>
             <footer class="_footer footer mt-5">
-              <div class="_layout">{% capture footer %}{% include footer.md %}{% endcapture %}{{ footer | markdownify }}
+              <div class="_layout">{%- capture footer %}{% include footer.md %}{%- endcapture %}
+{{ footer | markdownify }}
                 <hr class="thin"/>
                 <p class="text-right text-gray"><small>
                     This site is open source.
@@ -490,8 +493,11 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
         </div>
       </div>
       <div class="_view">
-        <div class="_layout _1200">{% include theme_switch.html %}</div>
-      </div>{% include layout_body.html %}
+        <div class="_layout _1200">
+{% include theme_switch.html %}
+        </div>
+      </div>
+{% include layout_body.html %}
     </div>
   </body>
 </html>
